--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,18 +4,19 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
-
     <application
+            android:name=".Authorization.RetrofitApplication"
             android:allowBackup="true"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:name=".SampleApplication"
             android:theme="@style/AppTheme">
-        <activity android:name=".DisplayMessages">
+        <activity android:name=".Authorization.Authorization">
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".DispalayMessages.DisplayMessages">
+        </activity>
+        <activity android:name=".Authorization.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
